sass/_clash.scss
@import "_vendor";
@import "_variables";

#logo {
    max-height: 60vh;
}

header {
    transition: all ease-in-out 0.4s;

    .navbar-collapse {
        @include media-breakpoint-down(md) {
            padding: 15px !important;
        }
    }


    .navbar-nav {
        
        cursor: pointer;

        .nav-link {
            color: white;
            cursor: pointer;
        }
    }

    .logo {
        max-height: 100%;
        margin: auto;

        img {
            max-width: 90px;
        }
    }

    &.sticky_header {
        background-color: $clash-dark-grey;
        margin: 0;
        padding: 5px;
        box-shadow: 0 0 42px rgba(0, 0, 0, 0.08);
        transition: all ease-in-out 0.4s;

        .navbar-toggler {
            //color: $clash-white;
            right: 12px;
            transition: all ease-in-out 0.4s;
            opacity: 1;
        }

        .logo {
            transition: all ease-in-out 1s;

            @include media-breakpoint-down(sm) {
                transform: translateX(-35vw);

                img {
                    max-width: 85px;

                    transition: all ease-in-out 0.4s;
                }
            }
        }

    }


    .navbar-toggler {
        opacity: 0;
        //color: transparent;
        font-size: x-large;

        // Let logo center itself with margin: auto;
        position: absolute;
        right: 16px;

        transition: all ease-in-out 0.4s;
    }

    .logo {
        transition: all ease-in-out 1s;

        img {
            transition: all ease-in-out 0.4s;
        }
    }
}

html {
    height: 100%;
    width: 100%;
    overflow-x: hidden;

    max-width: 100vw;

    body {
        background-color: $clash-bg-color;
        overflow-x: hidden;
        height: 100%;
        max-width: 100%;

        main {
            .video-background-holder {
                position: relative;
                background-color: white;

                height: calc(var(--vh, 1vh) * 100);

                min-height: 25rem;
                width: 100%;

                overflow: hidden;
            }

            .video-background-holder video {
                position: absolute;
                top: 50%;
                left: 50%;
                min-width: 100%;
                min-height: 100%;
                width: auto;
                height: auto;
                z-index: 0;
                transform: translateX(-50%) translateY(-50%);
            }

            .video-background-content {
                position: relative;
                z-index: 3;
            }

            .video-background-overlay {
                position: absolute;
                top: 50%;
                left: 50%;
                min-width: 100vw;
                min-height: calc(var(--vh, 1vh) * 100);
                width: auto;
                height: auto;
                transform: translateX(-50%) translateY(-50%);
                z-index: 1;

                background-color: black;
                opacity: 0.5;
            }

            .video-background-baffo {
                position: absolute;
                display: none;
                bottom: 0px;
                left: 0px;
                height: 100%;
                width: 100%;
                z-index: 2;
            }


            #btn-partner-collaboriamo-partners{
                display: block;
            }
            
            @media screen and (orientation: landscape) {
                .video-background-baffo {
                    display: none
                }
                #btn-partner-collaboriamo-partners{
                    display: block;
                }
            }

            &>.container {
                @include media-breakpoint-down(sm) {
                    padding-right: 0;
                    padding-left: 0;
                }
            }

            .sfondo {
                position: absolute;
                left: 0;
                height: 120%;
                width: 100%;
                z-index: -1;

                // padding-top: 262.16%; /* (img-height / img-width * container-width) */
                /* (1158.4 / 441.87 * 100) */

                background-image: url('/assets/img/logo/logo.vuoto.gap.svg');
                background-repeat: no-repeat;
                background-size: auto 7000px;
                background-position-x: -60vw;
                background-color: transparent;

                &.alt {
                    background-position-x: 60vw;
                }
            }

            // First impression
            .text-fi {
                color: white;
            }

            .sct-container {
                position: relative;
                width: 100%;
                color: $clash-txt-color;
                // padding: 32px;
                // margin-bottom: 30px;

                // Nasconde linea sotto i titoli
                // overflow-x: hidden;

                &.alt {
                    background-color: $clash-bg-color-alt;
                    width: 100%;
                    color: $clash-txt-color-title-alt;
                    border-radius: 15px;

                    @include media-breakpoint-up(lg) {
                        border-radius: 0 0px 0px 0;

                        &::before {
                            content: "";
                            position: absolute;
                            width: 100%;
                            height: 100%;
                            top: 0;
                            left: 0;
                            margin-left: -100%;
                            background-color: $clash-bg-color-alt;
                        }
                    }

                    .sfondo {
                        z-index: 0;
                    }

                    .sct {
                        // margin-top: 0;
                        // margin-right: 0;
                        // margin-bottom: 32px;
                        // margin-left: 0;

                        .sct-title {
                            color: $clash-txt-color-title-alt;

                            h2:after {
                                border-color: $clash-txt-color-title-alt;
                            }
                        }
                    }
                }
            }

            .sct {
                margin-top: 0;
                margin-right: 0;
                // margin-bottom: 32px;
                margin-left: 0;

                padding: 32px 0;

                .sct-title {
                    color: $clash-txt-color-title;

                    @include media-breakpoint-down(xs) {

                        // Linea sotto i titoli
                        h2:after {
                            content: ' ';
                            display: block;
                            width: 160%;
                            border: 1px solid $clash-txt-color-title;

                            position: relative;
                            left: -100%;
                            top: -1px;

                            border-radius: 4px;
                            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
                        }

                        &.alt {
                            h2:after {

                                left: auto;
                                right: -66%;
                            }
                        }
                    }
                }

                .sct-body {

                    max-width: 100%;

                    padding-top: 16px;

                    .carousel-partners {
                        width: 100%;
                        margin: auto;
                        min-height: 50vh;

                        img {
                            display: block;
                            margin: auto;
                            max-width: 100%;
                            max-height: 12vh;
                            height: auto;
                        }
                    }
                }

                .sct-nav {
                    // margin: auto;
                    margin-top: 32px;
                    min-width: 180px;
                    max-width: 200px;
                }

                .sct-first {
                    height: 100vh;
                    height: calc(var(--vh, 1vh) * 100);
                    width: auto;

                    .overlay {
                        position: absolute;
                        top: 0;
                        left: 0;
                        height: 100%;
                        width: 100%;
                        background-color: black;
                        opacity: 0.5;
                        z-index: 1;
                    }

                    video {
                        position: absolute;
                        top: 50%;
                        left: 50%;
                        min-width: 100%;
                        min-height: 100%;
                        width: auto;
                        max-height: 100%;
                        z-index: 0;

                        transform: translateX(-50%) translateY(-50%);
                    }
                }
            }
        }
    }
}

footer {
    background-color: $clash-dark-grey;
    min-height: 40vh;
    left: 0;
    bottom: 0;
    width: 100%;
}

